CocaColaProjectBidev_2/src/objects/Capital_Expenditure__c.object
<CustomObject>
    <fields>
        <fullName>Amount__c</fullName>
        <label>Amount (JPY)</label>
        <precision>18</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>AssetCategory__c</fullName>
        <label>Asset Category</label>
        <picklist>
            <picklistValues>
                <fullName>土地 / Land</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>構築物 / Land Improvements</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>建物 / Buildings</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>建物改造費 / Building Improvements</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>建物付属設備 / Building Fixtures</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ﾘｰｽ物件改良費 / Leasehold Improvements</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>機械設備 / Machinery &amp; Equipment</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>販売機材 - 自販機 / Sales Equipment - VM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>販売機材 - ｸｰﾗｰ / Sales Equipment - Coolers</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>販売機材 - ﾃﾞｨｽﾍﾟﾝｻｰ / Sales Equipment - Dispensers</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>販売機材 - その他 / Sales Equipment - Other</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IT ﾊｰﾄﾞｳｪｱ / IT Hardware</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IT ｿﾌﾄｳｪｱ / IT Software</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>車両 - 自動車 / Fleet - Automobiles</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>車両 - ﾄﾗｯｸ / Fleet - Trucks</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>車両 - その他 / Fleet - Other</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>工具器具備品 / Furniture &amp; Fixtures</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>その他無形固定資産 / Other Intangible Assets</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>InvestmentObjectiveCategory__c</fullName>
        <label>Investment Objective Category</label>
        <picklist>
            <picklistValues>
                <fullName>法律/法的規制対応 / Legal Regulatory Compliance</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>更新投資（老朽に伴う入替） / Maintenance or Replacement</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>品質基準対応（環境負荷軽減・労働安全衛生含む） / Quality Standards</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>効率性/生産性向上 / Efficiency/Productivity</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>顧客ﾆｰｽﾞへの対応 / Customer Specific and Consumer Focus</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>販売機材戦略 / Cold Drink Initiatives</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>売上成長/営業力強化 / Other Growth Initiatives</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>その他の戦略的対応 / Strategic Initiatives</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>RFA__c</fullName>
        <label>RFA</label>
        <referenceTo>RFA__c</referenceTo>
        <relationshipName>Capital_Expenditures</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Report_Amount_000JPY__c</fullName>
        <formula>Amount__c  / 1000</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Amount (000JPY)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Capital Request Detail</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>RECORDTYPE</columns>
        <columns>RFA__c</columns>
        <columns>AssetCategory__c</columns>
        <columns>InvestmentObjectiveCategory__c</columns>
        <columns>Amount__c</columns>
        <columns>Report_Amount_000JPY__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>UPDATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>CE#-{000000}</displayFormat>
        <label>Capital Request Detail Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Capital Request Details</pluralLabel>
    <recordTypes>
        <fullName>CapitalProjectRequest</fullName>
        <active>true</active>
        <label>Capital Project Request</label>
    </recordTypes>
    <recordTypes>
        <fullName>SmallProjectRequest</fullName>
        <active>true</active>
        <label>Medium Project Request</label>
    </recordTypes>
    <recordTypes>
        <fullName>Small_Project_Request_25MM</fullName>
        <active>true</active>
        <label>Small Project Request</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>